package Control;

import Helpers.IMenu;

public class BookingControl implements IMenu {
    @Override
    public void menu() {

    }
}
