package Control;

import Helpers.IMenu;

public class CustomerControl implements IMenu {
    @Override
    public void menu() {

    }
}
