package Control;

import Helpers.IMenu;

public class RoomControl implements IMenu {
    @Override
    public void menu() {

    }
}
