package Helpers;

public interface IMenu {
    void menu();
}
