@startuml
'https://plantuml.com/class-diagram

class Main {

}

class Database {
}

interface DAO.RoomDAO {
}

interface DAO.CustomerDAO {
}

interface DAO.BookingDAO {
}

interface Helpers.IMenu {
void menu()
}

class DAO.RoomDAOImpl {
}

class Control.RoomControl {
void addRoom()
void getAllRooms()
void getAvailableRooms()
void updateRoomPrice()
void updateRoomType()
}

class Service.RoomService {
}

class DAO.CustomerDAOImpl {
}

class Control.CustomerControl {
void addCustomer()
void getAllCustomers()
void findCustomerByEmail()
void updateCustomerCity()
void deleteCustomer()
}

class Service.CustomerService {
}

class DAO.BookingDAOImpl {
}

class Control.BookingControl {
void bookRoom()
void getAllBookings()
void getBookingsByCustomerEmail()
void CancelBooking()
}

class Service.BookingService {
}

class MainMenu {
void menu()
}

class CreateTestDatabse {
void createDataIfNotExists()
}

DAO.RoomDAOImpl ..|> DAO.RoomDAO
DAO.CustomerDAOImpl ..|> DAO.CustomerDAO
DAO.BookingDAOImpl ..|> DAO.BookingDAO
Main --> CreateTestDatabse
Main --> MainMenu
MainMenu --> Control.CustomerControl
MainMenu --> Control.RoomControl
MainMenu --> Control.BookingControl
Control.CustomerControl --> Service.CustomerService
Service.CustomerService --> DAO.CustomerDAOImpl
Control.RoomControl --> Service.RoomService
Service.RoomService --> DAO.RoomDAOImpl
Control.BookingControl --> Service.BookingService
Service.BookingService --> DAO.BookingDAOImpl
DAO.RoomDAOImpl --> Database
DAO.CustomerDAOImpl --> Database
DAO.BookingDAOImpl --> Database
Control.RoomControl --|> Helpers.IMenu
Control.CustomerControl --|> Helpers.IMenu
Control.BookingControl --|> Helpers.IMenu
MainMenu --|> IMenu
CreateTestDatabse --> Database

@enduml